Name:                RPNSolver
Version:             1.0
Description:         RPN Solver Kata in Haskell
License:             MIT
Author:              Benjamin Augustin
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable rpn-solver
    Main-is:           Main.hs
    ghc-options:
          -Wall -Werror
    Build-Depends:     base

Test-Suite rpn-solver-spec
    Type:       exitcode-stdio-1.0
    Main-is:    Spec.hs
    Build-Depends: base
                 , hspec
